Made sponsor form the correct width on mobile.

--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ img {
     }
 
     .sponsorForm {
-        width: 90%;
+        width: 80%;
     }
 }
 
